--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,7 +85,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Q)
-+AxisMappings=(AxisName="NormalAttack",Scale=1.000000,Key=LeftMouseButton)
++AxisMappings=(AxisName="ThrowAttack",Scale=1.000000,Key=LeftMouseButton)
++AxisMappings=(AxisName="AnvilAttack",Scale=1.000000,Key=RightMouseButton)
++AxisMappings=(AxisName="DecoyAttack",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="UltAttack",Scale=1.000000,Key=R)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
