--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,11 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=47B0133444E2BC2C259391B35E242EDE
+CompanyName=PyroWilDx
+ProjectVersion=1.0
+ProjectName=Eat Wars
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
